End of day commit

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -2,3 +2,4 @@ $color_background : #131B21;
 $color_steel_blue : #2F4859;
 $color_magenta    : #E0014D;
 $color_turquise   : #2FC1B9;
+$color_gray       : #BFBFBF;
