--- a/css/basestyle.scss
+++ b/css/basestyle.scss
@@ -2,13 +2,14 @@
 @import url('https://fonts.googleapis.com/css?family=Barlow:700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
+
 * {
   margin  : 0;
   padding : 0;
   }
 
 a {
-  color : base.$color_turquise;
+  color : base.$color_magenta;
   }
 
 
@@ -18,27 +19,33 @@ body {
   }
 
 header {
-  background-color : base.$color_turquise;
+  background-color : base.$color_background;
   justify-content  : space-between;
-  min-height       : 20vh;
+  min-height       : 15vh;
+  max-height       : 25vh;
+
+  h1 {
+	color : base.$color_turquise;
+	}
   }
 
 nav {
-  ul {
-	list-style-type : none;
-	justify-content : space-evenly;
-	flex-wrap       : wrap;
-	}
+  background-color : base.$color_steel_blue;
 
   margin-top       : 2vh;
   padding          : 2vh 0;
-  background-color : base.$color_magenta;
+
+  ul {
+	flex-wrap       : wrap;
+	justify-content : space-evenly;
+	list-style-type : none;
+	}
   }
 
 main {
-  background-color : base.$color_steel_blue;
+  background-color : base.$color_gray;
+  //min-height       : 70vh;
   padding          : 0 2vw;
-  min-height       : 80vh;
 
   div {
 	margin : 20px;
@@ -50,8 +57,9 @@ footer {
   }
 
 .mainframe {
-  max-width : 1300px;
-  margin    : auto;
+  margin     : auto;
+  max-width  : 1200px;
+  min-height : 100vh;
   }
 
 .grid-conatiner {
