--- a/css/basestyle.css
+++ b/css/basestyle.css
@@ -6,7 +6,7 @@
 }
 
 a {
-  color: #2FC1B9;
+  color: #E0014D;
 }
 
 body {
@@ -14,26 +14,29 @@ body {
 }
 
 header {
-  background-color: #2FC1B9;
+  background-color: #131B21;
   justify-content: space-between;
-  min-height: 20vh;
+  min-height: 15vh;
+  max-height: 25vh;
+}
+header h1 {
+  color: #2FC1B9;
 }
 
 nav {
+  background-color: #2F4859;
   margin-top: 2vh;
   padding: 2vh 0;
-  background-color: #E0014D;
 }
 nav ul {
-  list-style-type: none;
-  justify-content: space-evenly;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+  list-style-type: none;
 }
 
 main {
-  background-color: #2F4859;
+  background-color: #BFBFBF;
   padding: 0 2vw;
-  min-height: 80vh;
 }
 main div {
   margin: 20px;
@@ -44,8 +47,9 @@ footer {
 }
 
 .mainframe {
-  max-width: 1300px;
   margin: auto;
+  max-width: 1200px;
+  min-height: 100vh;
 }
 
 .grid-conatiner {
