--- a/css/basestyle.css
+++ b/css/basestyle.css
@@ -5,10 +5,6 @@
   padding: 0;
 }
 
-a {
-  color: #E0014D;
-}
-
 body {
   background-color: black;
 }
@@ -16,17 +12,14 @@ body {
 header {
   background-color: #131B21;
   justify-content: space-between;
-  min-height: 15vh;
-  max-height: 25vh;
-}
-header h1 {
-  color: #2FC1B9;
 }
 
 nav {
   background-color: #2F4859;
-  margin-top: 2vh;
   padding: 2vh 0;
+}
+nav a {
+  color: #E0014D;
 }
 nav ul {
   flex-wrap: wrap;
@@ -35,7 +28,7 @@ nav ul {
 }
 
 main {
-  background-color: #BFBFBF;
+  background-color: #EEEEEE;
   padding: 0 2vw;
 }
 main div {
@@ -55,7 +48,34 @@ footer {
 .grid-conatiner {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: 15vh 10vh auto auto;
+}
+@media screen and (max-width: 700px) {
+  .grid-conatiner {
+    grid-template-rows: 20vh 10vh auto auto;
+  }
+}
+
+.social-media-banner {
+  max-width: 30%;
+  max-height: 15vh;
+}
+@media screen and (max-width: 700px) {
+  .social-media-banner {
+    max-width: 40%;
+  }
+}
+
+.sm-link-container {
+  margin-right: 2vw;
+}
+.sm-link-container svg {
+  padding-top: 10%;
+  height: 80%;
+  max-height: 15vh;
+}
+.sm-link-container svg path {
+  fill: #EEEEEE;
 }
 
 .text-heading {
@@ -65,7 +85,15 @@ footer {
 .head-row {
   align-items: center;
   justify-content: space-between;
-  padding: 1vh 2vw;
+  width: 100%;
+  height: 100%;
+}
+.head-row h1 {
+  color: #2FC1B9;
+}
+
+.title {
+  margin-left: 10%;
 }
 
 .contact {
