--- a/css/basestyle.scss
+++ b/css/basestyle.scss
@@ -8,10 +8,6 @@
   padding : 0;
   }
 
-a {
-  color : base.$color_magenta;
-  }
-
 
 body {
 
@@ -21,19 +17,16 @@ body {
 header {
   background-color : base.$color_background;
   justify-content  : space-between;
-  min-height       : 15vh;
-  max-height       : 25vh;
-
-  h1 {
-	color : base.$color_turquise;
-	}
   }
+
 
 nav {
   background-color : base.$color_steel_blue;
-
-  margin-top       : 2vh;
   padding          : 2vh 0;
+
+  a {
+	color : base.$color_magenta;
+	}
 
   ul {
 	flex-wrap       : wrap;
@@ -65,7 +58,40 @@ footer {
 .grid-conatiner {
   display               : grid;
   grid-template-columns : 1fr;
-  grid-template-rows    : auto auto auto;
+  grid-template-rows    : 15vh 10vh auto auto;
+  @media screen and (max-width : 700px) {
+	grid-template-rows : 20vh 10vh auto auto;
+	}
+  }
+
+.social-media-banner {
+  //height : 100%;
+  max-width  : 30%;
+  max-height : 15vh;
+  //flex-wrap  : nowrap;
+  @media screen and (max-width : 700px) {
+	//flex-wrap : wrap;
+	max-width : 40%;
+	}
+  }
+
+.sm-link-container {
+
+  margin-right : 2vw;
+
+  a {
+
+	}
+
+  svg {
+	padding-top : 10%;
+	height      : 80%;
+	max-height  : 15vh;
+
+	path {
+	  fill : base.$color_gray;
+	  }
+	}
   }
 
 .text-heading {
@@ -75,7 +101,16 @@ footer {
 .head-row {
   align-items     : center;
   justify-content : space-between;
-  padding         : 1vh 2vw;
+  width           : 100%;
+  height          : 100%;
+
+  h1 {
+	color : base.$color_turquise;
+	}
+  }
+
+.title {
+  margin-left : 10%;
   }
 
 .contact {
