--- a/css/_base.scss
+++ b/css/_base.scss
@@ -14,4 +14,6 @@ $color_Instagram_red         : #FD1D1D;
 $color_Instagram_darkOrankge : #F56040;
 $color_Instagram_Orange      : #F77737;
 $color_Instagram_yellow      : #FCAF45;
-$color_Instagram_lightYellow : #FFDC80
+$color_Instagram_lightYellow : #FFDC80;
+
+//$font_family_text: avenir;
