--- a/css/_base.scss
+++ b/css/_base.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Barlow:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
 $color_background            : #131B21;
 $color_steel_blue            : #2F4859;
 $color_magenta               : #E0014D;
