--- a/css/header.scss
+++ b/css/header.scss
@@ -3,21 +3,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 
-* {
-  margin  : 0;
-  padding : 0;
-  }
-
-*::selection {
-  color : base.$color_magenta;
-  }
-
-
-body {
-
-  background-color : black /* base.$color_background;*/
-  }
-
 header {
   background-color : base.$color_background;
   justify-content  : space-between;
@@ -46,6 +31,12 @@ nav {
 	}
   }
 
+.mobile_hidden {
+  @media screen and (max-width : 700px) {
+	display : none;
+	}
+  }
+
 main {
   background-color : base.$color_background;
   color            : base.$color_gray;
@@ -62,28 +53,6 @@ footer {
   background-color : base.$color_background;
   }
 
-.hover-blue:hover {
-  color : base.$color_turquise;
-  }
-
-.hover-magenta:hover {
-  color : base.$color_magenta;
-  }
-
-.mainframe {
-  margin     : auto;
-  max-width  : 900px;
-  min-height : 100vh;
-  }
-
-.grid-conatiner {
-  display               : grid;
-  grid-template-columns : 1fr;
-  grid-template-rows    : 30vh 10vh 50vh 10vh;
-  @media screen and (max-width : 700px) {
-	grid-template-rows : 20vh 10vh auto auto;
-	}
-  }
 
 .social-media-banner {
   //height : 100%;
@@ -132,26 +101,4 @@ footer {
 
 .title {
   margin-left : 10%;
-  }
-
-.contact {
-  margin : auto;
-  }
-
-.flex-column {
-  display        : flex;
-  flex-direction : column;
-  }
-
-.flex-row {
-  display        : flex;
-  flex-direction : row;
-  }
-
-.textstyle-heading {
-  font-family : 'Barlow', sans-serif;
-  }
-
-.textstyle-text {
-  font-family : 'Open Sans', sans-serif;
   }
