--- a/css/_base.scss
+++ b/css/_base.scss
@@ -19,4 +19,9 @@ $color_Instagram_Orange      : #F77737;
 $color_Instagram_yellow      : #FCAF45;
 $color_Instagram_lightYellow : #FFDC80;
 
-//$font_family_text: avenir;
+$font_family_text            : 'Open Sans', sans-serif;
+$font_family_heading         : 'Barlow', sans-serif;
+
+
+$breakpoint_tablet           : 600px;
+$breakpoint_desktop          : 900px;
