--- a/css/header.css
+++ b/css/header.css
@@ -1,85 +1,48 @@
 @import url("https://fonts.googleapis.com/css?family=Barlow:700&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Barlow:700&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 header {
   background-color: #131B21;
   justify-content: space-between;
 }
 
-nav {
-  background-color: #131B21;
-  padding: 2vh 0;
-}
-nav a {
-  color: #EEEEEE;
-  font-weight: bold;
-  text-decoration: none;
-}
-nav a:hover {
-  color: #E0014D;
-}
-nav ul {
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  list-style-type: none;
-}
-
-@media screen and (max-width: 700px) {
-  .mobile_hidden {
-    display: none;
+.sm_banner {
+  max-height : 15vh;
+  max-width  : 30%;
   }
-}
-
-main {
-  background-color: #131B21;
-  color: #EEEEEE;
-  overflow: auto;
-  padding: 0 2vw;
-}
-main div {
-  margin: 20px;
-}
-
-footer {
-  background-color: #131B21;
-}
-
-.social-media-banner {
-  max-width: 30%;
-  max-height: 15vh;
-}
 @media screen and (max-width: 700px) {
-  .social-media-banner {
-    max-width: 40%;
+  .sm_banner {
+	max-width : 40%;
+	}
+}
+
+.sm_link_container {
+  margin-right : 2vw;
   }
-}
 
-.sm-link-container {
-  margin-right: 2vw;
-}
-.sm-link-container svg {
-  padding-top: 10%;
-  height: 80%;
-  max-height: 15vh;
-}
-.sm-link-container svg path {
-  fill: #EEEEEE;
-}
+.sm_link_container svg {
+  height      : 80%;
+  max-height  : 15vh;
+  padding-top : 10%;
+  }
 
-.text-heading {
-  text-align: center;
-}
+.sm_link_container svg path {
+  fill : #EEEEEE;
+  }
 
-.head-row {
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 100%;
-}
-.head-row h1 {
-  color: #2FC1B9;
-}
+.text_heading {
+  text-align : center;
+  }
+
+.head_row {
+  align-items     : center;
+  height          : 100%;
+  justify-content : space-between;
+  width           : 100%;
+  }
+
+.head_row h1 {
+  color : #2FC1B9;
+  }
 
 .title {
   margin-left: 10%;
