--- a/css/header.scss
+++ b/css/header.scss
@@ -1,7 +1,4 @@
 @use 'base';
-@import url('https://fonts.googleapis.com/css?family=Barlow:700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-
 
 header {
   background-color : base.$color_background;
@@ -9,55 +6,11 @@ header {
   }
 
 
-nav {
-  background-color : base.$color_background;
-  padding          : 2vh 0;
 
-  a {
-	color           : base.$color_gray;
-	font-weight     : bold;
-	text-decoration : none;
-	}
-
-  a:hover {
-	color : base.$color_magenta;
-	}
-
-  ul {
-	flex-wrap       : wrap;
-	justify-content : space-evenly;
-	list-style-type : none;
-
-	}
-  }
-
-.mobile_hidden {
-  @media screen and (max-width : 700px) {
-	display : none;
-	}
-  }
-
-main {
-  background-color : base.$color_background;
-  color            : base.$color_gray;
-  overflow         : auto;
-  //min-height       : 70vh;
-  padding          : 0 2vw;
-
-  div {
-	margin : 20px;
-	}
-  }
-
-footer {
-  background-color : base.$color_background;
-  }
-
-
-.social-media-banner {
+.sm_banner {
   //height : 100%;
-  max-width  : 30%;
   max-height : 15vh;
+  max-width  : 30%;
   //flex-wrap  : nowrap;
   @media screen and (max-width : 700px) {
 	//flex-wrap : wrap;
@@ -65,7 +18,7 @@ footer {
 	}
   }
 
-.sm-link-container {
+.sm_link_container {
 
   margin-right : 2vw;
 
@@ -74,9 +27,9 @@ footer {
 	}
 
   svg {
-	padding-top : 10%;
 	height      : 80%;
 	max-height  : 15vh;
+	padding-top : 10%;
 
 	path {
 	  fill : base.$color_gray;
@@ -84,15 +37,15 @@ footer {
 	}
   }
 
-.text-heading {
+.text_heading {
   text-align : center;
   }
 
-.head-row {
+.head_row {
   align-items     : center;
+  height          : 100%;
   justify-content : space-between;
   width           : 100%;
-  height          : 100%;
 
   h1 {
 	color : base.$color_turquise;
