--- a/css/footer.scss
+++ b/css/footer.scss
@@ -1,9 +1,9 @@
 @use 'base';
 
 
-.contact {
-  margin : auto;
-  }
+//.contact {
+//  margin : auto;
+//  }
 
 footer {
   background-color : base.$color_background;
