--- a/css/layout.scss
+++ b/css/layout.scss
@@ -76,7 +76,7 @@ footer {
 
 
 .hover_blue:hover {
-  color : base.$color_turquise;
+  color : base.$color_turquoise;
   }
 
 .hover_magenta:hover {
