--- a/css/main.scss
+++ b/css/main.scss
@@ -6,9 +6,5 @@ main {
   color            : base.$color_gray;
   overflow         : auto;
   //min-height       : 70vh;
-  padding          : 0 2vw;
-
-  div {
-	margin : 20px;
-	}
+  padding          : 0 50px;
   }
