--- a/css/_base.scss
+++ b/css/_base.scss
@@ -4,7 +4,7 @@
 $color_background            : #131B21;
 $color_steel_blue            : #2F4859;
 $color_magenta               : #E0014D;
-$color_turquise              : #2FC1B9;
+$color_turquoise             : #2FC1B9;
 $color_gray                  : #EEEEEE;
 
 $color_Facebook_blue         : #4267B2;
@@ -14,7 +14,7 @@ $color_Instagram_purple      : #833AB4;
 $color_Instagram_darkPink    : #C13584;
 $color_Instagram_purpleRed   : #E1306C;
 $color_Instagram_red         : #FD1D1D;
-$color_Instagram_darkOrankge : #F56040;
+$color_Instagram_darkOrange  : #F56040;
 $color_Instagram_Orange      : #F77737;
 $color_Instagram_yellow      : #FCAF45;
 $color_Instagram_lightYellow : #FFDC80;
