--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Barlow:700&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
-
 main {
   background-color : #131B21;
   color            : #EEEEEE;
   overflow         : auto;
-  padding          : 0 2vw;
-  }
-
-main div {
-  margin : 20px;
+  padding          : 0 50px;
   }
 
 /*# sourceMappingURL=main.css.map */
